--- a/Home.html
+++ b/Home.html
@@ -30,13 +30,15 @@
     <!-- Home Section -->
 
     <div id="Home">
-        <h1>Welcome to Foodies &#128525</h1>
+        <h1>Welcome to Foodies&#128525</h1>
         <ul>
             <li><a href="#Home">Home</a></li>
-            <li> <a href="#About">About Foodies</a></li>
-            <li> <a href="#Menu">Menu</a></li>
+            <li><a href="#Menu">Menu</a></li>
+            <li><a href="#About">About</a></li>
             <li><a href="Contact.html" target="blank">Contact Us</a></li>
         </ul>
+       <br>
+
 
         <img src="img/Food.jpg" alt="Food Image" height="300">
         <figcaption>Burger And Cold Drink</figcaption>
