--- a/Home.html
+++ b/Home.html
@@ -22,6 +22,7 @@
             border-collapse: collapse;
             padding: 10px;
         }
+
     </style>
 </head>
 
@@ -40,7 +41,7 @@
        <br>
 
 
-        <img src="img/Food.jpg" alt="Food Image" height="300">
+        <img src="img/Food.jpg" alt="Food Image" height="250px" width="300px">
         <figcaption>Burger And Cold Drink</figcaption>
     </div>
 
